# cloud_robot_x86

./: README.md
data_fliter/laser_double/: CMakeLists.txt
data_fliter/laser_double/launch/: laser_double.launch
data_fliter/laser_double/src/: laser_double.cpp
data_fliter/robot_pose_ekf/: robot_pose_ekf.launch
data_fliter/robot_pose_ekf/include/robot_pose_ekf/: odom_estimation_node.h
data_fliter/robot_pose_ekf/src/: nonlinearanalyticconditionalgaussianodo.cpp  odom_estimation.cpp  odom_estimation_node.cpp
data_fliter/robot_pose_ekf/test/: test_robot_pose_ekf_zero_covariance.cpp
hardware/fdilink_ahrs/launch/: ahrs_data.launch
hardware/fdilink_ahrs/src/: ahrs_driver.cpp
hardware/lsx10/lslidar_driver/launch/: lslidar_net.launch  lslidar_net_double.launch  (+2 more)
hardware/ltme_node/launch/: ltme02a.launch
hardware/ltme_node/src/: update_firmware.cpp
hardware/rplidar_ros/launch/: rplidar.launch  rplidar_s2.launch
hardware/rplidar_ros/src/: client.cpp
move_base/base_local_planner/src/: goal_functions.cpp  latched_stop_rotate_controller.cpp
move_base/carrot_planner/src/: carrot_planner.cpp
move_base/clear_costmap_recovery/src/: clear_costmap_recovery.cpp
move_base/dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
move_base/global_planner/: CMakeLists.txt  package.xml
move_base/global_planner/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp  rrt_expand.cpp
move_base/map_server/src/: main.cpp
move_base/move_base/: CMakeLists.txt
move_base/move_base/src/: move_base.cpp  move_base_node.cpp
move_base/navfn/src/: navfn_ros.cpp
move_base/rotate_recovery/src/: rotate_recovery.cpp
planner/DStar-Global-Planner/: CMakeLists.txt  package.xml
planner/DStar-Global-Planner/include/: dstar.h
planner/DStar-Global-Planner/src/: dstar.cpp
planner/rrt_exploration/include/: functions.h
planner/rrt_exploration/src/: functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp
planner/teb_local_planner/src/: homotopy_class_planner.cpp  optimal_planner.cpp  teb_local_planner_ros.cpp  test_optim_node.cpp
script/: auto_install.sh
slam/faster-lio/config/: velodyne.yaml
yd_robot/yd_agv_driver/: CMakeLists.txt  package.xml
yd_robot/yd_agv_driver/costmap_common_params/: costmap_common_params.yaml  dstar_global_planner_params.yaml  teb_local_planner_params.yaml
yd_robot/yd_agv_driver/include/: yd_robot.h  yd_robot_data.h
yd_robot/yd_agv_driver/launch/: bringup_calib.launch  ydrobot_3dastra.launch  ydrobot_3dmapping.launch  ydrobot_lidar.launch  ydrobot_mapping.launch  ydrobot_mapsave.launch  ydrobot_nav_amcl.launch  ydrobot_nav_cartographer.launch  ydrobot_open.launch  ydrobot_serial.launch  ydrobot_visualization.launch  ydrobot_vslamapping.launch
yd_robot/yd_agv_driver/launch/include/: amcl.launch  dwa_local_planner.launch  robot_pose_ekf.launch  rtabmap_mapping.launch  teb_local_planner.launch  ydrobot_al_gmapping.launch  ydrobot_cartographer.launch  ydrobot_cartographer_localization.launch  ydrobot_doublelidar.launch
yd_robot/yd_agv_driver/map/: big_good1_map.pgm  big_good1_map.yaml  big_map.pgm  big_map.yaml  cartographer_2d_35_3.pgm  cartographer_2d_35_3.yaml  cartographer_2d_35_5.pgm  cartographer_2d_35_5.yaml  cartographer_2d_35_f.pbstream  cartographer_2d_35_f.pgm  cartographer_2d_35_f.yaml  cartographer_2d_imu.pgm  cartographer_2d_imu.yaml  cartographer_first.pgm  cartographer_first.yaml  cartographer_origin.pgm  cartographer_origin.yaml
yd_robot/yd_agv_driver/param_common/: dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
yd_robot/yd_agv_driver/rviz/: cartographer_2d.rviz  cartographer_map.rviz  test_3d_navigation.rviz
yd_robot/yd_agv_driver/scripts/: localization_2d_cartographer.lua  send_mark.py
yd_robot/yd_agv_driver/src/: yd_robot.cpp  yd_robot_data.cpp
yd_robot/yd_control/: CMakeLists.txt  package.xml
yd_robot/yd_control/cfg/: BaseAction.cfg
yd_robot/yd_control/include/: base_action.h  base_control.h  header_file.h
yd_robot/yd_control/launch/: ydrobot_autolock.launch  ydrobot_controller.launch  ydrobot_teleop.launch
yd_robot/yd_control/script/: ydrobot_handcontrol.py  ydrobot_test_cartographer.py
yd_robot/yd_control/src/: base_action.cpp  base_control.cpp  base_control_node.cpp  client_test.cpp  ydrobot_controls.cpp  ydrobot_controls_node.cpp
yd_robot/yd_data_process/: CMakeLists.txt  package.xml
yd_robot/yd_description/: CMakeLists.txt  package.xml
yd_robot/yd_description/meshes/: base.stl  base_all.stl  base_link.stl  lidar_link.stl  wheel_linkl.stl  wheel_linkr.stl
yd_robot/yd_description/rviz/: hgrobot_config.rviz  hgrobot_urdf.rviz
yd_robot/yd_description/urdf/: ydrobot_agv.urdf  ydrobot_agv_base.urdf
yd_robot/yd_description/xacro/: base.urdf  ydrobot_agv.xacro  ydrobot_agv_base.xacro  ydrobot_agv_circle.xacro  ydrobot_agv_rm.xacro  ydrobot_base.xacro  ydrobot_rm.xacro
yd_robot/yd_gazebo/: CMakeLists.txt  package.xml
yd_robot/yd_gazebo/src/: simple_world_plugin.cpp
yd_robot/yd_global_planner/: CMakeLists.txt  package.xml  ydg_plugin.xml
yd_robot/yd_global_planner/cfg/: YDGPlanner.cfg
yd_robot/yd_global_planner/include/: Base_Expander.h  Grid_PathMap.h  PotentialCost_calculator.h  QuadraticCost_calculator.h  TraceBackBase.h  yd_global_base.h  yd_math.h  yd_planner_core.h
yd_robot/yd_global_planner/src/: Grid_PathMap.cpp  QuadraticCost.cpp  yd_math.cpp  yd_planner.cpp  yd_planner_core.cpp
yd_robot/yd_local_planner/: CMakeLists.txt  package.xml
yd_robot/yd_local_planner/cfg/: YDLPlanner.cfg
yd_robot/yd_markers/: CMakeLists.txt  package.xml
yd_robot/yd_markers/include/: basic_block.h  path_plan_rrt.h  path_plan_rrt_star.h
yd_robot/yd_markers/launch/: rrt_star.launch  set_map.launch
yd_robot/yd_markers/rviz/: path_plan_rrt.rviz
yd_robot/yd_markers/src/: basic_block.cpp  path_plan_rrt.cpp  path_plan_rrt_star.cpp
yd_robot/yd_msgs/: CMakeLists.txt  package.xml
yd_robot/yd_msgs/action/: BackToCharge.action  MoveLocalTarget.action
yd_robot/yd_msgs/srv/: Pose_Task.srv
(+14 files in other folders)
