<?xml version="1.0"?>
<package format="2">
  <name>yd_control</name>
  <version>0.0.0</version>
  <description>The yd_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ydf@todo.todo">ydf</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>yd_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_depend>roslib</build_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roslib</exec_depend> 
  
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_depend>robot_msgs</build_depend>
  <build_export_depend>robot_msgs</build_export_depend>
  <exec_depend>robot_msgs</exec_depend>
  
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>yd_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>nav_msgs</exec_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>yd_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <exec_depend>std_srvs</exec_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
